# EDSDCA

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdca.cu
data/: australian_scale.csv
include/dlog/: logging.h
include/edsdca/: edsdca.h
include/edsdca/loss/: hingeloss.h  loss.h
include/edsdca/memory/: memory.h  memory.hpp  memsync.h  memsync.hpp
include/edsdca/models/: sdca.h
include/edsdca/solvers/: sdca.h
include/edsdca/tools/: csvloader.h  csvparser.h  filereader.h  libsvmloader.h  libsvmparser.h  string.h  timer.h
include/edsdca/util/: Makefile  cuda_util.h  math_utils.h  math_utils.hpp
include/ptags/: ptags.h
include/util/: cuda_util.h  datetime.h  test.cc
proposal-template/: courseProject.bib  proposal-template.aux  proposal-template.bbl  proposal-template.blg  proposal-template.tex
python/: CMakeLists.txt  cuda_utils.hpp  generate_data.py  math_utils.cpp  math_utils.cu  math_utils.hpp  memsync.cpp  memsync.hpp  sdca.cpp  sdca.hpp
results/: 50k_CPU.csv  50k_GPU.csv  dim1000_CPU.csv  dim1000_GPU.csv  dim100_n200_CPU.csv  dim100_n200_GPU.csv  dim10k_n1k_CPU.csv  dim10k_n1k_GPU.csv
scripts/: convert_libsvm_to_csv.py  generate_plots.py
src/: Makefile  queue_test.cc  read_test.cc
src/edsdca/: run_model.cc  testdata.csv
src/edsdca/loss/: hingeloss.cc
src/edsdca/memory/: memory.cc  memsync.cc  memsync.cpp  memsync.cu
src/edsdca/models/: sdca.cc  sdca.cu
src/edsdca/tensor/: .cuda_tensor.h.swp  Makefile  cuda_matrix.h  cuda_tensor.h
src/edsdca/tools/: csvloader.cc  csvparser.cc  filereader.cc  libsvmparser.cc  string.cc  timer.cc
src/edsdca/util/: cuda_util.cu  math_utils.cc  math_utils.cu
src/edsdca/utils/: math_utils.cpp  math_utils.cu
test/: README.md  all_tests.cc  csv_load_test.h  eigen_gpu_test.cc  math_util_test.cc  math_util_test.h  sdca_test.h
test/data/: dim1000_n1000_s100_test.csv  dim100_n200_s100_test.csv  large_test.csv  n200_s100_test.csv  n50_s100_test.csv  test_data_3d.csv
tex/proposal-template/: all.bib  courseProject.bib  nips_2016.sty  proposal-template.aux  proposal-template.bbl  proposal-template.blg  proposal-template.tex
tex/report/: README.md  better.txt  naive.txt  proposal-template.blg  report.aux  report.blg  report.tex
tex/slides/: Makefile  README.md  allocExample.txt  allocImproved.txt  dataEx.txt  presentation.aux  presentation.bbl  presentation.blg  presentation.nav  presentation.snm  presentation.tex  presentation.toc  wrapperEx.txt
tex/updated-report/: report.aux  report.tex
